Expose 'roles' in CEL access check scripts